--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,26 +8,26 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "Publications"
-    url: /publications/
+  - title: "论文"
+    url: /teaching/
 
-  - title: "Talks"
+  - title: "专利"
     url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "专著"
+    url: /publications/    
     
-  - title: "Portfolio"
+  - title: "奖项"
     url: /portfolio/
         
-  - title: "Blog Posts"
+  - title: "社会任职"
     url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+  #- title: "CV"
+  #  url: /cv/
     
   # - title: "CV"
   #   url: /cv-json/
     
-  - title: "Guide"
-    url: /markdown/
+  #- title: "Guide"
+  #  url: /markdown/
