--- a/_config.yml
+++ b/_config.yml
@@ -82,6 +82,11 @@ publication_category:
   bigdata:
     title: '工业大数据方向'
 
+patent_category:
+  authorized:
+    title: '已授权专利'
+  public:
+    title: '已公开专利'
 
 
 # Site Settings
