--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
     url: /talks/
 
   - title: "专著"
-    url: /teaching/
+    url: /book&standard/
     
   - title: "奖项"
     url: /portfolio/
