更新专利与论文

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,10 +9,10 @@
 
 main:
   - title: "论文"
-    url: /publications/ 
+    url: /paper/
 
   - title: "专利"
-    url: /talks/
+    url: /patent/
 
   - title: "专著"
     url: /book&standard/
