--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "王晨"
+title                    : "首页"
 title_separator          : "-"
 name                     : &name "王晨"
 description              : &description "personal description"
