--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,22 +9,29 @@
 
 main:
   - title: "论文"
+    entitle: "Papers"
     url: /paper/
-
+    
   - title: "专利"
+    entitle: "Patents"
     url: /patent/
 
   - title: "专著"
+    entitle: "Books"
     url: /book/
 
   - title: "标准"
+    entitle: "Standards"
     url: /standard/
 
   - title: "奖项"
+    entitle: "Awards"
     url: /awards/
         
   - title: "社会任职"
+    entitle: "Social Services"
     url: /social-service/
 
   - title: "政策研究"
+    entitle: "Policy Researches"
     url: /others/
