修改作者栏

--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,13 @@ author:
   # Biographic information
   avatar           : "wang-chen.jpg"
   name             : "王晨"
+  name_en          : "Chen Wang"
   pronouns         : # example: "she/her"  
   bio              : # "Short biography for the left-hand sidebar"
   location         : "北京"
-  location_en         : "Beijing"
+  location_en      : "Beijing"
   employer         : "清华大学"
+  employer_en      : "Tsinghua University"
   uri              : # URL
   email            : "wang_chen@tsinghua.edu.cn" 
 
