--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # server process.
 
 # Basic Site Settings
-locale                   : "en-US"
+locale                   : "zh-China"
 site_theme               : "default"
 title                    : "首页"
 title_en                 : "Homepage"
